package com.example.plantsvszombies

interface Observer {
    fun update(arg: Boolean)
}